--- a/webserver/templates/home.html
+++ b/webserver/templates/home.html
@@ -6,18 +6,58 @@
     <title>Scout</title>
     <link rel="stylesheet" href="/static/pose.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="/static/main.css">
 </head>
 
 <body>
     <!-- <div class="container"> -->
-    <div>
+    <div class="container">
         <h1>Scout Control</h1>
         <div class="row">
-            <div class="col-3">
-            <struct>
-                <div id="joyDiv" style="width:200px;height:200px;"></div> <!-- margin-bottom:20px; -->
-            </struct>
+            <div class="col-8">
+                <h1 style="text-align: center;">Live Camera Feed</h1>
+                <img id="video-feed" src="/video_feed" alt="Main Camera Feed" class="img-fluid">
             </div>
+            <div class="col-4">
+                <struct>
+                    <div id="joyDiv" style="width:200px;height:200px;"></div> <!-- margin-bottom:20px; -->
+                </struct>
+            </div>
+        </div>
+
+        <div class="row my-4">
+            <!-- First Row -->
+            <div class="col-md-4">
+              <div class="panel">
+                <div class="panel-title">Core Status</div>
+                <div class="panel-content">
+                  <span id="core-status-cpu-temp" >CPU Temp: --°C</span>
+                  <span id="core-status-voltage">Voltage: --V</span>
+                 
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="panel">
+                <div class="panel-title">Motors</div>
+                <div class="panel-content">
+                  
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="panel">
+                <div class="panel-title">Battery</div>
+                <div class="panel-content">
+                  <span id="battery-voltage">Voltage: --V</span>
+                  <span id="battery-amps">Amps: --A</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        
+        <div class="row">
+            
             <div class="col-1 right-align">
                 <div class="wheel" id="FL"></div>
                 <div class="space">
