--- a/website_scratch/pose.css
+++ b/website_scratch/pose.css
@@ -86,7 +86,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: linear-gradient(white 10px, transparent 10px);
+    background-image: linear-gradient(black 10px, transparent 10px);
     background-size: 100% 20px;
 }
 
