--- a/webserver/templates/home.html
+++ b/webserver/templates/home.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scout</title>
-    <link rel="stylesheet" href="/static/pose.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='pose.css') }}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="/static/main.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
 </head>
 
 <body>
@@ -15,7 +15,10 @@
         <h1>Scout Control</h1>
         <div class="row">
             <div class="col-8">
-                <img id="video-feed" src="/video_feed" alt="Main Camera Feed" class="img-fluid">
+                <video id="hls-video" class="img-fluid" controls autoplay style="max-width: 100%; height: auto;">
+                    <source src="/hls/live.m3u8" type="application/vnd.apple.mpegurl">
+                </video>
+                <!-- <img id="video-feed" src="/video_feed" alt="Main Camera Feed" class="img-fluid"> -->
             </div>
             <div class="col-4">
                 <struct>
@@ -108,9 +111,8 @@
             </div> -->
         
     </div>
-    <script src="/static/data.js"></script>
-    <script src="/static/joy.js"></script>
+    <script src="{{ url_for('static', filename='data.js') }}?v=1.0.2"></script>
+    <script src="{{ url_for('static', filename='joy.js') }}"></script>
     <script src="https://cdn.socket.io/4.0.0/socket.io.min.js"></script>
-    
 </body> 
 </html>
