--- a/webserver/static/main.css
+++ b/webserver/static/main.css
@@ -8,6 +8,7 @@ body {
     border-radius: 5px;
     background-color: #333;
     padding: 15px;
+    min-height: 50px;
 }
 .panel-title {
     font-size: 1.25rem;
