--- a/webserver/templates/home.html
+++ b/webserver/templates/home.html
@@ -6,7 +6,7 @@
     <title>Scout</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='pose.css') }}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='main.css')}}?no-cache=2">
 </head>
 
 <body>
@@ -23,38 +23,69 @@
                 <!-- <img id="video-feed" src="/video_feed" alt="Main Camera Feed" class="img-fluid"> -->
             </div>
             <div class="col-4 text-center">
-                <struct>
-                    <div style="display: flex; justify-content: center;">
-                        <div id="joyDiv" style="width:200px; height:200px;"></div>
+                <div class="panel">
+                    <div class="panel-title">Control</div>
+                    <div class="panel-content">
+                        <div style="display: flex; justify-content: center;">
+                            <div id="joyDiv" style="width:200px; height:200px;"></div>
+                        </div>
+                        <div style="margin-top:20px; text-align:center;">
+                            <button id="leftTurnInPlace" class="btn btn-primary">Left</button>
+                            <button id="rightTurnInPlace" class="btn btn-primary">Right</button>
+                        </div>
+                        <div style="margin-top:20px; text-align:center;">
+                            <!-- Input field for distance -->
+                            <input
+                                type="text"
+                                id="distanceInput"
+                                placeholder="meters"
+                                style="width: 100px; text-align: center; margin-right: 10px;"
+                            />
+                            <button id="goDistanceButton" class="btn btn-success">Go</button>
+                            <div id="confirmationMessage" style="margin-top:10px; font-size:14px; color:green; display:none;"></div>
+                        </div>
                     </div>
-                    <div style="margin-top:20px; text-align:center;">
-                        <button id="leftTurnInPlace" class="btn btn-primary">Left</button>
-                        <button id="rightTurnInPlace" class="btn btn-primary">Right</button>
-                    </div>
-                </struct>
+                </div>
             </div>
         </div>
 
         <div class="row my-4">
             <!-- First Row -->
             <div class="col-md-4">
-              <div class="panel">
-                <div class="panel-title">Core Status</div>
-                <div class="panel-content">
-                  <span id="core-status-cpu-temp" >CPU Temp: --°C</span>
-                  <span id="core-status-uptime">Uptime: --V</span>
-                 
+                <div class="panel">
+                  <div class="panel-title">Core Status</div>
+                  <div class="panel-content">
+                    <span id="core-status-cpu-temp" >CPU Temp: --°C</span>
+                    <span id="core-status-uptime">Uptime: --V</span>
+                   
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="col-md-4">
-              <div class="panel">
-                <div class="panel-title">Odometry</div>
-                <div class="panel-content">
-                    <span id="odom-distance" >Distance: --M</span>
+              <div class="col-md-4">
+                <div class="panel">
+                  <div class="panel-title">Odometry</div>
+                  <div class="panel-content">
+                      <span id="odom-distance" >Distance: --M</span>
+                  </div>
                 </div>
               </div>
-            </div>
+              <div class="col-md-4">
+                <div class="panel">
+                  <div class="panel-title">Camera</div>
+                  <div class="panel-content">
+                      <span id="pan_angle" >Pan: --˚</span>
+                      <div style="margin-top:20px; text-align:center;">
+                        <button id="leftMastPanButton" class="btn btn-secondary">Left</button>
+                        <button id="rightMastPanButton" class="btn btn-secondary">Right</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+        
+        </div>
+
+        <div class="row my-4">
+            
             <div class="col-md-4">
               <div class="panel">
                 <div class="panel-title">Battery</div>
@@ -120,7 +151,7 @@
         
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pako/2.0.4/pako.min.js"></script>
-    <script src="{{ url_for('static', filename='data.js') }}?v=1.0.1"></script>
+    <script src="{{ url_for('static', filename='data.js') }}?no-cache=1.0.2"></script>
     <script src="{{ url_for('static', filename='joy.js') }}"></script>
     <script src="https://cdn.socket.io/4.0.0/socket.io.min.js"></script>
 </body> 
