made some changes and added preliminary work for urdf support

--- a/webserver/static/main.css
+++ b/webserver/static/main.css
@@ -23,3 +23,9 @@ body {
 .panel-content span {
     display: block;
 }
+
+#image-display {
+    max-width: 100%; /* Let it scale to container */
+    width: 640px; /* Desired width */
+    height: auto; /* Maintain aspect ratio */
+}
