--- a/webserver/static/pose.css
+++ b/webserver/static/pose.css
@@ -5,7 +5,7 @@
     --back-left: 0;
     --left-speed: 0px;
     --right-speed: 0px;
-    --wheel-color: hsl(120, 100%, 50%);
+    --wheel-color: rgba(2, 100, 2, 0.426);
     --angle-FL: 0deg;
     --angle-FR: 0deg;
     --angle-BL: 0deg;
@@ -86,7 +86,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: linear-gradient(white 10px, transparent 10px);
+    background-image: linear-gradient(rgb(82, 80, 80) 10px, transparent 10px);
     background-size: 100% 20px;
 }
 
