--- a/webserver/templates/home.html
+++ b/webserver/templates/home.html
@@ -6,6 +6,7 @@
     <title>Scout</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='pose.css')}}?no-cache=4">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='main.css')}}?no-cache=2">
 </head>
 
@@ -82,15 +83,18 @@
                         <div class="col-8">
                             <div style="margin-top:20px; display: flex; flex-direction: column; align-items: center; gap: 10px;">
                                 <!-- Up button -->
-                                <button id="upMastPanButton" class="btn btn-secondary">Up</button>
+                                <button id="upMastPanButton" class="btn btn-secondary"><i class="bi bi-arrow-up"></i></button>
                                 <div style="display: flex; gap: 10px;">
+
                                   <!-- Left, Center, Right buttons -->
-                                  <button id="leftMastPanButton" class="btn btn-secondary">Left</button>
+                                  <button id="left90" class="btn btn-secondary"><i class="bi bi-arrow-90deg-left"></i></button>
+                                  <button id="leftMastPanButton" class="btn btn-secondary"><i class="bi bi-arrow-left"></i></button>
                                   <button id="centerMastPanButton" class="btn btn-secondary">O</button>
-                                  <button id="rightMastPanButton" class="btn btn-secondary">Right</button>
+                                  <button id="rightMastPanButton" class="btn btn-secondary"><i class="bi bi-arrow-right"></i></button>
+                                  <button id="right90" class="btn btn-secondary"><i class="bi bi-arrow-90deg-right"></i></button>
                                 </div>
                                 <!-- Down button -->
-                                <button id="downMastPanButton" class="btn btn-secondary">Down</button>
+                                <button id="downMastPanButton" class="btn btn-secondary"><i class="bi bi-arrow-down"></i></button>
                               </div>
                         </div>
                     </div>
@@ -169,7 +173,7 @@
         
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pako/2.0.4/pako.min.js"></script>
-    <script src="{{ url_for('static', filename='data.js') }}?no-cache=26-1008"></script>
+    <script src="{{ url_for('static', filename='data.js') }}?no-cache=26-2022"></script>
     <script src="{{ url_for('static', filename='joy.js') }}"></script>
     <script src="https://cdn.socket.io/4.0.0/socket.io.min.js"></script>
 </body> 
